# autodnd

./: .dockerignore  Dockerfile  PLAN.md  README.md  main.py  pyproject.toml
autodnd/: __main__.py  config.py
autodnd/agents/: __init__.py  action_validator_agent.py  game_master.py  npc_agent.py  orchestrator.py  rag_agent.py  state_serializer.py  tools.py
autodnd/api/: __init__.py  app.py  llm_config.py  security_config.py
autodnd/engine/: __init__.py  action_validator.py  combat.py  dice.py  game_engine.py  hex_navigation.py  history.py  inventory_manager.py  stat_calculator.py  time_manager.py
autodnd/game/: __init__.py
autodnd/helpers/: __init__.py  debug.py
autodnd/models/: __init__.py  actions.py  items.py  messages.py  metadata.py  player.py  state.py  stats.py  world.py
autodnd/persistence/: __init__.py  state_dumper.py
autodnd/security/: __init__.py  input_sanitizer.py  output_validator.py  prompt_builder.py  security_agent.py
static/: game.html  index.html
tests/: __init__.py  conftest.py  test_config.py  test_input_sanitizer.py  test_output_validator.py  test_prompt_builder.py  test_security_agent.py  test_security_config.py
